modify: add korean names to villagers

--- a/da/preproc-villagers.ipynb
+++ b/da/preproc-villagers.ipynb
@@ -170,6 +170,8 @@
    "source": [
     "서로 순서가 같다는 것이 아까 밝혀졌으므로 서로 합치기가 쉬울 것 같습니다.\n",
     "\n",
+    "생각해보니 그보다는 `dfc`는 아예 필요가 없을 것 같기도 합니다.\n",
+    "\n",
     "koname.txt 를 번역 사전으로 만들어 봅니다."
    ]
   },
