feat: concat villagers and special npcs

--- a/da/export-char.ipynb
+++ b/da/export-char.ipynb
@@ -1522,6 +1522,255 @@
    "source": [
     "npcs = npcs.assign(special=lambda v: True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 `chars`와 합칩니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 454 entries, 0 to 453\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   index                454 non-null    int64 \n",
+      " 1   name_en              454 non-null    object\n",
+      " 2   image_icon           413 non-null    object\n",
+      " 3   image_photo          445 non-null    object\n",
+      " 4   image_house          391 non-null    object\n",
+      " 5   species              391 non-null    object\n",
+      " 6   gender               454 non-null    object\n",
+      " 7   personality          391 non-null    object\n",
+      " 8   personality_subtype  391 non-null    object\n",
+      " 9   hobby                391 non-null    object\n",
+      " 10  birthday             454 non-null    object\n",
+      " 11  catchphrase          391 non-null    object\n",
+      " 12  favorite_song        391 non-null    object\n",
+      " 13  favorite_saying      391 non-null    object\n",
+      " 14  name_ko              454 non-null    object\n",
+      " 15  gender_asia          454 non-null    object\n",
+      " 16  special              454 non-null    bool  \n",
+      " 17  styles               391 non-null    object\n",
+      " 18  colors               391 non-null    object\n",
+      "dtypes: bool(1), int64(1), object(17)\n",
+      "memory usage: 64.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars = pd.concat([chars, npcs], axis=0).reset_index()\n",
+    "chars.info()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `birthday` 숫자 필드 만들기\n",
+    "\n",
+    "`birthday_month`, `birthday_day`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    01-27\n",
+       "1    07-02\n",
+       "2    04-21\n",
+       "3    10-18\n",
+       "4    06-09\n",
+       "Name: birthday, dtype: object"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# birthday 칼럼을 mm-dd로 고칩니다.\n",
+    "def reformat_birthday(bdstr):\n",
+    "    m, d = map(int, bdstr.split('/'))\n",
+    "    return f'{m:02}-{d:02}'\n",
+    "\n",
+    "# reformat_birthday('1/26')\n",
+    "chars['birthday'] = chars['birthday'].apply(reformat_birthday)\n",
+    "chars['birthday'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\movomo\\Documents\\200ok\\da\\export-char.ipynb Cell 33'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/movomo/Documents/200ok/da/export-char.ipynb#ch0000040?line=0'>1</a>\u001b[0m chars[\u001b[39m'\u001b[39m\u001b[39mbirthday_month\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m chars[\u001b[39m'\u001b[39m\u001b[39mbirthday\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m v: \u001b[39mint\u001b[39m(v[:\u001b[39m2\u001b[39m]))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/movomo/Documents/200ok/da/export-char.ipynb#ch0000040?line=1'>2</a>\u001b[0m chars[\u001b[39m'\u001b[39m\u001b[39mbirthday_day\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m chars[\u001b[39m'\u001b[39m\u001b[39mbirthday\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m v: \u001b[39mint\u001b[39m(v[\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m:]))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/movomo/Documents/200ok/da/export-char.ipynb#ch0000040?line=2'>3</a>\u001b[0m chars\u001b[39m.\u001b[39;49mdrop(\u001b[39m'\u001b[39;49m\u001b[39mindex\u001b[39;49m\u001b[39m'\u001b[39;49m, axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, inplace\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\u001b[39m.\u001b[39;49mhead()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'head'"
+     ]
+    }
+   ],
+   "source": [
+    "chars['birthday_month'] = chars['birthday'].apply(lambda v: int(v[:2]))\n",
+    "chars['birthday_day'] = chars['birthday'].apply(lambda v: int(v[-2:]))\n",
+    "chars.drop('index', axis=1, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>image_icon</th>\n",
+       "      <th>image_photo</th>\n",
+       "      <th>image_house</th>\n",
+       "      <th>species</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>personality</th>\n",
+       "      <th>personality_subtype</th>\n",
+       "      <th>hobby</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>catchphrase</th>\n",
+       "      <th>favorite_song</th>\n",
+       "      <th>favorite_saying</th>\n",
+       "      <th>name_ko</th>\n",
+       "      <th>gender_asia</th>\n",
+       "      <th>special</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>colors</th>\n",
+       "      <th>birthday_month</th>\n",
+       "      <th>birthday_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>Wisp</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>깨빈</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name_en image_icon image_photo image_house species gender personality  \\\n",
+       "409    Wisp        NaN         NaN         NaN     NaN   Male         NaN   \n",
+       "\n",
+       "    personality_subtype hobby birthday catchphrase favorite_song  \\\n",
+       "409                 NaN   NaN    02-26         NaN           NaN   \n",
+       "\n",
+       "    favorite_saying name_ko gender_asia  special styles colors  \\\n",
+       "409             NaN      깨빈        Male     True    NaN    NaN   \n",
+       "\n",
+       "     birthday_month  birthday_day  \n",
+       "409               2            26  "
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars[chars['name_en'].duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wisp 이란 녀석이 중복이고 어떤 녀석들은 아이콘 이미지가 없습니다.\n",
+    "\n",
+    "~~이건 수작업으로 해야 할 것 같기 때문에 일단 익스포트합니다.~~\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars.drop(409, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars = chars.sort_values('name_en').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 번역\n",
+    "\n",
+    "영어 속성을 번역합니다.\n"
+   ]
   }
  ],
  "metadata": {
