--- a/da/da.ipynb
+++ b/da/da.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "1    Male            244"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "7         친절함                  59"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "5    패션            66"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -608,74 +608,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>birthday</th>\n",
-       "      <th>counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01-01</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01-02</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01-03</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01-04</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01-05</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  birthday  counts\n",
-       "0    01-01       1\n",
-       "1    01-02       2\n",
-       "2    01-03       1\n",
-       "3    01-04       1\n",
-       "4    01-05       1"
+       "birthday\n",
+       "01-01    1\n",
+       "01-02    2\n",
+       "01-03    1\n",
+       "01-04    1\n",
+       "01-05    1\n",
+       "        ..\n",
+       "12-27    1\n",
+       "12-28    1\n",
+       "12-29    2\n",
+       "12-30    1\n",
+       "12-31    2\n",
+       "Length: 365, dtype: int64"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +637,7 @@
    "source": [
     "# 생일 같은 주민이 있는지 확인 => 존재 (최대 3명까지 겹침. 06-07)\n",
     "birth = characters.groupby('birthday').size().reset_index(name='counts')\n",
-    "birth.head()\n",
+    "birth\n",
     "# birth.loc[birth['counts'].idxmax()]\n",
     "\n",
     "# 생일이 없는 날이 있는지 확인 => 없는 날 04-01"
