modify: value 추출 feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/da/da.ipynb
+++ b/da/da.ipynb
@@ -326,104 +326,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7,  7, 15, 13,  6, 23,  9,  4, 16, 10, 16, 17,  9, 11, 18,  8,  9,\n",
+       "        8,  7, 15,  8,  9,  7,  8, 15,  3, 10, 13, 15, 20,  6, 13, 18,  7,\n",
+       "       11], dtype=int64)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "species = characters.groupby('species').size().reset_index(name='species_counts')\n",
+    "species_val = species['species_counts'].values\n",
+    "species_val"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## personality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>personality</th>\n",
-       "      <th>personality_counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>느끼함</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>단순 활발</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>먹보</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>무뚝뚝</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>성숙함</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>아이돌</td>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>운동광</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>친절함</td>\n",
-       "      <td>59</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  personality  personality_counts\n",
-       "0         느끼함                  34\n",
-       "1       단순 활발                  24\n",
-       "2          먹보                  60\n",
-       "3         무뚝뚝                  55\n",
-       "4         성숙함                  55\n",
-       "5         아이돌                  49\n",
-       "6         운동광                  55\n",
-       "7         친절함                  59"
+       "array(['느끼함', '단순 활발', '먹보', '무뚝뚝', '성숙함', '아이돌', '운동광', '친절함'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "personality = characters.groupby('personality').size().reset_index(name='personality_counts')\n",
-    "personality"
+    "personality['personality'].values"
    ]
   },
   {
@@ -482,87 +438,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hobby</th>\n",
-       "      <th>hobby_counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>교육</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>놀이</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>운동</td>\n",
-       "      <td>66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>음악</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>자연</td>\n",
-       "      <td>66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>패션</td>\n",
-       "      <td>66</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  hobby  hobby_counts\n",
-       "0    교육            64\n",
-       "1    놀이            65\n",
-       "2    운동            66\n",
-       "3    음악            64\n",
-       "4    자연            66\n",
-       "5    패션            66"
+       "array(['교육', '놀이', '운동', '음악', '자연', '패션'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hobby = characters.groupby('hobby').size().reset_index(name='hobby_counts')\n",
-    "hobby"
+    "hobby\n",
+    "hobby['hobby'].values"
    ]
   },
   {
@@ -1094,80 +987,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Style 1</th>\n",
-       "      <th>style1_counts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Active</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cool</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Cute</td>\n",
-       "      <td>63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Elegant</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Gorgeous</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Simple</td>\n",
-       "      <td>118</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    Style 1  style1_counts\n",
-       "0    Active             50\n",
-       "1      Cool             68\n",
-       "2      Cute             63\n",
-       "3   Elegant             54\n",
-       "4  Gorgeous             38\n",
-       "5    Simple            118"
+       "array([ 50,  68,  63,  54,  38, 118], dtype=int64)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1005,7 @@
     "# Style 1\n",
     "villagers = pd.read_excel('./datasets/villagers.xlsx')\n",
     "style1 = villagers.groupby('Style 1').size().reset_index(name='style1_counts')\n",
-    "style1"
+    "style1['style1_counts'].values\n"
    ]
   },
   {
