--- a/da/da.ipynb
+++ b/da/da.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "      <td>https://acnhcdn.com/latest/NpcIcon/brd06.png</td>\n",
        "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlBr...</td>\n",
        "      <td>https://acnhcdn.com/drivesync/render/houses/br...</td>\n",
-       "      <td>Bird</td>\n",
+       "      <td>새</td>\n",
        "      <td>Male</td>\n",
        "      <td>...</td>\n",
        "      <td>무뚝뚝</td>\n",
@@ -85,8 +85,8 @@
        "      <td>aye aye</td>\n",
        "      <td>Steep Hill</td>\n",
        "      <td>Only quitters give up.</td>\n",
-       "      <td>['쿨']</td>\n",
-       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>[None, None]</td>\n",
        "      <td>6.0</td>\n",
        "      <td>89.0</td>\n",
        "    </tr>\n",
@@ -100,7 +100,7 @@
        "      <td>https://acnhcdn.com/latest/NpcIcon/squ05.png</td>\n",
        "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlSq...</td>\n",
        "      <td>https://acnhcdn.com/drivesync/render/houses/sq...</td>\n",
-       "      <td>Squirrel</td>\n",
+       "      <td>다람쥐</td>\n",
        "      <td>Female</td>\n",
        "      <td>...</td>\n",
        "      <td>아이돌</td>\n",
@@ -109,8 +109,8 @@
        "      <td>sidekick</td>\n",
        "      <td>Go K.K. Rider</td>\n",
        "      <td>You gotta put the pedal to the metal!</td>\n",
-       "      <td>['심플', '액티브']</td>\n",
-       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>[None, None]</td>\n",
+       "      <td>[None, None]</td>\n",
        "      <td>6.0</td>\n",
        "      <td>45.0</td>\n",
        "    </tr>\n",
@@ -124,7 +124,7 @@
        "      <td>https://acnhcdn.com/latest/NpcIcon/pig17.png</td>\n",
        "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlPi...</td>\n",
        "      <td>https://acnhcdn.com/drivesync/render/houses/pi...</td>\n",
-       "      <td>Pig</td>\n",
+       "      <td>돼지</td>\n",
        "      <td>Female</td>\n",
        "      <td>...</td>\n",
        "      <td>단순 활발</td>\n",
@@ -133,8 +133,8 @@
        "      <td>snuffle</td>\n",
        "      <td>K.K. House</td>\n",
        "      <td>You reap what you sow.</td>\n",
-       "      <td>['심플', '엘레강스']</td>\n",
-       "      <td>['하양색', '핑크색']</td>\n",
+       "      <td>[None, None]</td>\n",
+       "      <td>[None, None]</td>\n",
        "      <td>4.0</td>\n",
        "      <td>26.0</td>\n",
        "    </tr>\n",
@@ -148,7 +148,7 @@
        "      <td>https://acnhcdn.com/latest/NpcIcon/gor08.png</td>\n",
        "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...</td>\n",
        "      <td>https://acnhcdn.com/drivesync/render/houses/go...</td>\n",
-       "      <td>Gorilla</td>\n",
+       "      <td>고릴라</td>\n",
        "      <td>Male</td>\n",
        "      <td>...</td>\n",
        "      <td>먹보</td>\n",
@@ -157,8 +157,8 @@
        "      <td>ayyyeee</td>\n",
        "      <td>Go K.K. Rider</td>\n",
        "      <td>Life is a buffet. Always go back for seconds.</td>\n",
-       "      <td>['액티브']</td>\n",
-       "      <td>['하양색', '빨강색']</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>[None, None]</td>\n",
        "      <td>6.0</td>\n",
        "      <td>19.0</td>\n",
        "    </tr>\n",
@@ -172,7 +172,7 @@
        "      <td>https://acnhcdn.com/latest/NpcIcon/crd00.png</td>\n",
        "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...</td>\n",
        "      <td>https://acnhcdn.com/drivesync/render/houses/cr...</td>\n",
-       "      <td>Alligator</td>\n",
+       "      <td>악어</td>\n",
        "      <td>Male</td>\n",
        "      <td>...</td>\n",
        "      <td>먹보</td>\n",
@@ -181,8 +181,8 @@
        "      <td>it'sa me</td>\n",
        "      <td>Forest Life</td>\n",
        "      <td>Slow and steady wins the race.</td>\n",
-       "      <td>['심플']</td>\n",
-       "      <td>['빨강색', '파랑색']</td>\n",
+       "      <td>[None]</td>\n",
+       "      <td>[None, None]</td>\n",
        "      <td>6.0</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
@@ -213,12 +213,12 @@
        "3  https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...   \n",
        "4  https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...   \n",
        "\n",
-       "                                         image_house    species  gender  ...  \\\n",
-       "0  https://acnhcdn.com/drivesync/render/houses/br...       Bird    Male  ...   \n",
-       "1  https://acnhcdn.com/drivesync/render/houses/sq...   Squirrel  Female  ...   \n",
-       "2  https://acnhcdn.com/drivesync/render/houses/pi...        Pig  Female  ...   \n",
-       "3  https://acnhcdn.com/drivesync/render/houses/go...    Gorilla    Male  ...   \n",
-       "4  https://acnhcdn.com/drivesync/render/houses/cr...  Alligator    Male  ...   \n",
+       "                                         image_house species  gender  ...  \\\n",
+       "0  https://acnhcdn.com/drivesync/render/houses/br...       새    Male  ...   \n",
+       "1  https://acnhcdn.com/drivesync/render/houses/sq...     다람쥐  Female  ...   \n",
+       "2  https://acnhcdn.com/drivesync/render/houses/pi...      돼지  Female  ...   \n",
+       "3  https://acnhcdn.com/drivesync/render/houses/go...     고릴라    Male  ...   \n",
+       "4  https://acnhcdn.com/drivesync/render/houses/cr...      악어    Male  ...   \n",
        "\n",
        "  personality personality_subtype  hobby  catchphrase  favorite_song  \\\n",
        "0         무뚝뚝                   A     자연      aye aye     Steep Hill   \n",
@@ -227,24 +227,24 @@
        "3          먹보                   B     운동      ayyyeee  Go K.K. Rider   \n",
        "4          먹보                   B     놀이     it'sa me    Forest Life   \n",
        "\n",
-       "                                 favorite_saying          styles  \\\n",
-       "0                         Only quitters give up.           ['쿨']   \n",
-       "1          You gotta put the pedal to the metal!   ['심플', '액티브']   \n",
-       "2                         You reap what you sow.  ['심플', '엘레강스']   \n",
-       "3  Life is a buffet. Always go back for seconds.         ['액티브']   \n",
-       "4                 Slow and steady wins the race.          ['심플']   \n",
+       "                                 favorite_saying        styles        colors  \\\n",
+       "0                         Only quitters give up.        [None]  [None, None]   \n",
+       "1          You gotta put the pedal to the metal!  [None, None]  [None, None]   \n",
+       "2                         You reap what you sow.  [None, None]  [None, None]   \n",
+       "3  Life is a buffet. Always go back for seconds.        [None]  [None, None]   \n",
+       "4                 Slow and steady wins the race.        [None]  [None, None]   \n",
        "\n",
-       "           colors tier  rank  \n",
-       "0  ['검정색', '파랑색']  6.0  89.0  \n",
-       "1  ['검정색', '파랑색']  6.0  45.0  \n",
-       "2  ['하양색', '핑크색']  4.0  26.0  \n",
-       "3  ['하양색', '빨강색']  6.0  19.0  \n",
-       "4  ['빨강색', '파랑색']  6.0   6.0  \n",
+       "  tier  rank  \n",
+       "0  6.0  89.0  \n",
+       "1  6.0  45.0  \n",
+       "2  4.0  26.0  \n",
+       "3  6.0  19.0  \n",
+       "4  6.0   6.0  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Male</td>\n",
-       "      <td>244</td>\n",
+       "      <td>243</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -309,10 +309,10 @@
       "text/plain": [
        "   gender  gender_counts\n",
        "0  Female            208\n",
-       "1    Male            244"
+       "1    Male            243"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,25 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 7,  7, 15, 13,  6, 23,  9,  4, 16, 10, 16, 17,  9, 11, 18,  8,  9,\n",
-       "        8,  7, 15,  8,  9,  7,  8, 15,  3, 10, 13, 15, 20,  6, 13, 18,  7,\n",
-       "       11], dtype=int64)"
+       "array(['개', '개구리', '개미핥기', '고릴라', '고양이', '곰', '꼬마곰', '늑대', '다람쥐', '닭',\n",
+       "       '독수리', '돼지', '말', '문어', '사슴', '사자', '새', '수소', '악어', '암소', '양',\n",
+       "       '염소', '오리', '원숭이', '쥐', '캥거루', '코끼리', '코뿔소', '코알라', '타조', '토끼',\n",
+       "       '펭귄', '하마', '햄스터', '호랑이'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "species = characters.groupby('species').size().reset_index(name='species_counts')\n",
-    "species_val = species['species_counts'].values\n",
+    "species_val = species['species'].values\n",
     "species_val"
    ]
   },
@@ -385,7 +386,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
    "outputs": [],
    "source": [
     "# 한글 폰트 사용을 위해서 세팅\n",
@@ -461,7 +466,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -984,6 +993,13 @@
    "source": [
     "# Styles"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
