modify: translate species feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/da/da.ipynb
+++ b/da/da.ipynb
@@ -331,26 +331,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['개', '개구리', '개미핥기', '고릴라', '고양이', '곰', '꼬마곰', '늑대', '다람쥐', '닭',\n",
-       "       '독수리', '돼지', '말', '문어', '사슴', '사자', '새', '수소', '악어', '암소', '양',\n",
-       "       '염소', '오리', '원숭이', '쥐', '캥거루', '코끼리', '코뿔소', '코알라', '타조', '토끼',\n",
-       "       '펭귄', '하마', '햄스터', '호랑이'], dtype=object)"
+       "array([16, 18,  7,  9, 23, 15, 16, 11, 18,  9,  9, 15, 15,  3, 10,  7, 13,\n",
+       "        6,  7,  4, 13,  8, 17,  8, 15,  8, 11,  6,  9, 10, 20, 13,  7,  8,\n",
+       "        7], dtype=int64)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "species = characters.groupby('species').size().reset_index(name='species_counts')\n",
-    "species_val = species['species'].values\n",
+    "species_val = species['species_counts'].values\n",
     "species_val"
    ]
   },
