modify: process list literals

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -23,15 +23,409 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ast\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars = pd.read_excel(\n",
+    "  './datasets/characters-similarity.xlsx',\n",
+    "  sheet_name='Table1'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 391 entries, 0 to 390\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   id              390 non-null    object\n",
+      " 1   name_en         391 non-null    object\n",
+      " 2   name_ko         391 non-null    object\n",
+      " 3   image_icon      391 non-null    object\n",
+      " 4   species         391 non-null    object\n",
+      " 5   gender          391 non-null    object\n",
+      " 6   birthday        391 non-null    object\n",
+      " 7   birthday_month  391 non-null    int64 \n",
+      " 8   birthday_day    391 non-null    int64 \n",
+      " 9   personality     391 non-null    object\n",
+      " 10  hobby           391 non-null    object\n",
+      " 11  styles          391 non-null    object\n",
+      " 12  colors          391 non-null    object\n",
+      "dtypes: int64(2), object(11)\n",
+      "memory usage: 39.8+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>name_ko</th>\n",
+       "      <th>image_icon</th>\n",
+       "      <th>species</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>birthday_month</th>\n",
+       "      <th>birthday_day</th>\n",
+       "      <th>personality</th>\n",
+       "      <th>hobby</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>colors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>admiral</td>\n",
+       "      <td>Admiral</td>\n",
+       "      <td>일섭</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/brd06.png</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>01-27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>무뚝뚝</td>\n",
+       "      <td>자연</td>\n",
+       "      <td>['쿨']</td>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>agents</td>\n",
+       "      <td>Agent S</td>\n",
+       "      <td>2호</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/squ05.png</td>\n",
+       "      <td>Squirrel</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>07-02</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>아이돌</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>['심플', '액티브']</td>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>agnes</td>\n",
+       "      <td>Agnes</td>\n",
+       "      <td>아그네스</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/pig17.png</td>\n",
+       "      <td>Pig</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>04-21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>단순 활발</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>['심플', '엘레강스']</td>\n",
+       "      <td>['하양색', '핑크색']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>al</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>우락</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/gor08.png</td>\n",
+       "      <td>Gorilla</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>10-18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>['액티브']</td>\n",
+       "      <td>['하양색', '빨강색']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>alfonso</td>\n",
+       "      <td>Alfonso</td>\n",
+       "      <td>알베르트</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/crd00.png</td>\n",
+       "      <td>Alligator</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>06-09</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>['심플']</td>\n",
+       "      <td>['빨강색', '파랑색']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  name_en name_ko                                    image_icon  \\\n",
+       "0  admiral  Admiral      일섭  https://acnhcdn.com/latest/NpcIcon/brd06.png   \n",
+       "1   agents  Agent S      2호  https://acnhcdn.com/latest/NpcIcon/squ05.png   \n",
+       "2    agnes    Agnes    아그네스  https://acnhcdn.com/latest/NpcIcon/pig17.png   \n",
+       "3       al       Al      우락  https://acnhcdn.com/latest/NpcIcon/gor08.png   \n",
+       "4  alfonso  Alfonso    알베르트  https://acnhcdn.com/latest/NpcIcon/crd00.png   \n",
+       "\n",
+       "     species  gender birthday  birthday_month  birthday_day personality hobby  \\\n",
+       "0       Bird    Male    01-27               1            27         무뚝뚝    자연   \n",
+       "1   Squirrel  Female    07-02               7             2         아이돌    운동   \n",
+       "2        Pig  Female    04-21               4            21       단순 활발    놀이   \n",
+       "3    Gorilla    Male    10-18              10            18          먹보    운동   \n",
+       "4  Alligator    Male    06-09               6             9          먹보    놀이   \n",
+       "\n",
+       "           styles          colors  \n",
+       "0           ['쿨']  ['검정색', '파랑색']  \n",
+       "1   ['심플', '액티브']  ['검정색', '파랑색']  \n",
+       "2  ['심플', '엘레강스']  ['하양색', '핑크색']  \n",
+       "3         ['액티브']  ['하양색', '빨강색']  \n",
+       "4          ['심플']  ['빨강색', '파랑색']  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.info()\n",
+    "chars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['쿨']\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars['styles'].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "리스트들이 제대로 처리가 안 되어 있으니 변환합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0           [쿨]\n",
+      "1     [심플, 액티브]\n",
+      "2    [심플, 엘레강스]\n",
+      "3         [액티브]\n",
+      "4          [심플]\n",
+      "Name: styles, dtype: object\n",
+      "0    [검정색, 파랑색]\n",
+      "1    [검정색, 파랑색]\n",
+      "2    [하양색, 핑크색]\n",
+      "3    [하양색, 빨강색]\n",
+      "4    [빨강색, 파랑색]\n",
+      "Name: colors, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars['styles'] = chars['styles'].apply(ast.literal_eval)\n",
+    "chars['colors'] = chars['colors'].apply(ast.literal_eval)\n",
+    "print(chars['styles'].head())\n",
+    "print(chars['colors'].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>styles</th>\n",
+       "      <th>colors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[쿨]</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[심플, 액티브]</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[심플, 엘레강스]</td>\n",
+       "      <td>[하양색, 핑크색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[액티브]</td>\n",
+       "      <td>[하양색, 빨강색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[심플]</td>\n",
+       "      <td>[빨강색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>[심플, 쿨]</td>\n",
+       "      <td>[하양색, 회색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>[액티브, 쿨]</td>\n",
+       "      <td>[초록색, 검정색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>[엘레강스, 쿨]</td>\n",
+       "      <td>[오렌지색, 노랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>[고져스, 쿨]</td>\n",
+       "      <td>[보라색, 회색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>[심플, 큐트]</td>\n",
+       "      <td>[파랑색, 노랑색]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>391 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         styles       colors\n",
+       "0           [쿨]   [검정색, 파랑색]\n",
+       "1     [심플, 액티브]   [검정색, 파랑색]\n",
+       "2    [심플, 엘레강스]   [하양색, 핑크색]\n",
+       "3         [액티브]   [하양색, 빨강색]\n",
+       "4          [심플]   [빨강색, 파랑색]\n",
+       "..          ...          ...\n",
+       "386     [심플, 쿨]    [하양색, 회색]\n",
+       "387    [액티브, 쿨]   [초록색, 검정색]\n",
+       "388   [엘레강스, 쿨]  [오렌지색, 노랑색]\n",
+       "389    [고져스, 쿨]    [보라색, 회색]\n",
+       "390    [심플, 큐트]   [파랑색, 노랑색]\n",
+       "\n",
+       "[391 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.loc[:, 'styles': 'colors']"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "6a28367f67cdc883bf0651ab926a45cdaf5821f65ab5104ac3f819fe9582a76b"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
