modify: plan ahead

--- a/da/similarity-experimental.ipynb
+++ b/da/similarity-experimental.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -396,13 +396,52 @@
        "[391 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chars.loc[:, 'styles': 'colors']"
+    "chars[['styles', 'colors']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 계획\n",
+    "\n",
+    "유사성 평가에 사용할 속성은 아래의 5개입니다.\n",
+    "- birthday\n",
+    "- hobby\n",
+    "- personality\n",
+    "- style\n",
+    "- color\n",
+    "\n",
+    "이 중 style과 color는 한 개일 수도 있고 두 개일 수도 있어서 약간 골치가 아픕니다.\n",
+    "\n",
+    "### 비교 주체 고르기\n",
+    "\n",
+    "overlap 비스무리한 분석은 항목이 여러 개인 카테고리도 같거나 다르거나로 취급하기 때문에\n",
+    "모든 캐릭터의 특성이 한 눈에 보이는 테이블은 만들기가 곤란합니다.\n",
+    "따라서 실험용으로 사용할 캐릭터가 하나 필요합니다.\n",
+    "\n",
+    "그냥 맨 위에 있는 일섭이란 놈으로 합시다. (admiral)\n",
+    "\n",
+    "### 대략적인 과정\n",
+    "\n",
+    "1. 사용자에게 질문을 받습니다.\n",
+    "2. 5가지 속성 중 2가지로 먼저 필터링을 해서 연산 수를 줄입니다.\n",
+    "3. 남은 3속성은 3차원이므로 3차원 스캐터 그래프로 유사성을 보여줄 수 있습니다.\n",
+    "4. 캐릭터가 대략 400명이고, 2가지 필터링을 거치고 나면 많아봐야 100명 쯤 남을 것입니다.\n",
+    "5. 남은 캐릭터에 대해 벡터 크기를 계산하고 정렬합니다.\n",
+    "6. 벡터 크기는 차이입니다. 앞에 오는 캐릭터가 유사한 캐릭터, 뒤에 오면 다른 것입니다.\n",
+    "\n",
+    "### 어떤 속성으로 먼저 걸러야 하는가?\n",
+    "\n",
+    "그건 좀 생각을 해 봐야 합니다.\n",
+    "\n",
+    "기본적으로는 한번에 최대한 많이, 그리고 균일하게 걸러낼 수 있는 속성이 좋을 것입니다.\n"
    ]
   }
  ],
